--- a/public/css/style.css
+++ b/public/css/style.css
@@ -81,6 +81,18 @@ p{
   border-left: 1px solid #ebebeb;
 }
 
+.user-login-info-claro a, .cart-area-claro a{
+  position: relative;
+  width: 90px;
+  text-align: center;
+  flex: 0 0 90px;
+  line-height: 145px;
+  height: 100%;
+  color: #f0f0f0;
+  font-size: 20px;
+  display: block;
+}
+
 .header_area .cart-area a span, .header_area .user-login-info a span{
   font-size: 14px;
   top:-10px;
