--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,10 @@ p{
   border-left: 1px solid #ebebeb;
 }
 
+.user-login-info, .cart-area-claro{
+  border-left: 0px solid #ebebeb;
+}
+
 .user-login-info-claro a, .cart-area-claro a{
   position: relative;
   width: 90px;
