--- a/public/css/novo.css
+++ b/public/css/novo.css
@@ -839,20 +839,25 @@ border-radius: 5px;
 /*fim*/
 
 /*configs pag produto*/
+ .border_produto{
+   border-style: groove;
+   border-width: thin;
+
+ }
 
 #present {
     margin: 0px;
     /* margin-bottom: 3%; */
-    background-image: url("imagens/fundo-bkp.jpg");
-    background-repeat: repeat;
+    background-image: none;
+
 }
 
 #modelo{
-    width: 70%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-bottom: 3%;
-    position: relative;
+
+  margin-bottom: 12%;
+  margin-top: 8%;
+  margin-left: 30%;
+
 }
 
 #about {
@@ -863,16 +868,20 @@ border-radius: 5px;
     height: 30%;
 }
 
-
+.blocoproduto{
+  margin-top: 30px;
+}
+.titulo_produto{
+  font-weight: bold;
+  margin-bottom: 20px;
+}
 #descritivo {
     padding: 10px;
     color: white;
-    margin-top: auto;
-    margin-bottom: 3%;
+    font-style: 'Ubuntu'
     border: 5px solid floralwhite;
     background-color: black;
     text-transform: uppercase;
-    position: relative;
 }
 
 
@@ -881,22 +890,25 @@ border-radius: 5px;
     font: inherit;
     border-color: gray;
     height: 35px;
-    width: 60px;
+    width: 100px;
     background-color: aliceblue;
     color: black
 }
 
 .conclude {
-    text-align: center;
+    text-align: right;
     background-color: forestgreen;
     color: white;
     padding: 3px;
 }
+.position_name_d{
+  margin-top: 1%;
+}
 
 .size, .color, .conclude{
     align-content: flex-start;
-    margin: 5px;
     display: inline;
+
 }
 
 
