alterada pag produto e css novo

--- a/public/css/novo.css
+++ b/public/css/novo.css
@@ -374,7 +374,7 @@ p.direitos{
   text-decoration: none;
 }
 
-.fundoLogin{
+.fundologin2{
   background: url("imagens/login/fundo.jpg") no-repeat;
   background-size: cover;
   width: 100%;
