Adição de seleção de idioma no cabeçalho

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,3 +229,18 @@ p.direitos{
     margin-top: 22px;
   }
 }
+
+/*gtranslate*/
+
+#google_translate_element {
+  display: none;
+}
+
+.goog-te-banner-frame {
+  display: none!important;
+}
+
+body {
+  position: static!important;
+  top: 0 !important;
+}
