Itens do menu linkados corretamente

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -236,7 +236,7 @@ p.direitos{
   display: none;
 }
 
-.goog-te-banner-frame {
+.goog-te-banner-frame, .goog-gt-tt {
   display: none!important;
 }
 
